<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <TextView
                android:id="@+id/title_software"
                android:layout_margin="20dp"
                android:gravity="center"
                android:layout_marginTop="50dp"
                android:textSize="32sp"
                android:textColor="@color/black"
                android:layout_centerHorizontal="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name_software" />

            <TextView
                android:id="@+id/line1"
                android:layout_below="@id/title_software"
                android:background="@color/gray9"
                android:layout_width="match_parent"
                android:layout_height="1dp"/>

            <LinearLayout
                android:id="@+id/CRUD_software"
                android:layout_below="@id/line1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:textSize="16sp"
                    android:layout_margin="3dp"
                    android:background="@color/success"
                    android:padding="5dp"
                    android:gravity="center"
                    android:textColor="@color/white"
                    android:id="@+id/txtAdd"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/add" />

                <TextView
                    android:id="@+id/txtEdit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="3dp"
                    android:layout_weight="1"
                    android:background="@color/warning"
                    android:gravity="center"
                    android:padding="5dp"
                    android:text="@string/edit"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:visibility="gone" />

                <TextView
                    android:textSize="16sp"
                    android:layout_margin="3dp"
                    android:background="@color/danger"
                    android:padding="5dp"
                    android:gravity="center"
                    android:textColor="@color/white"
                    android:id="@+id/txtDelete"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/delete" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/filter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/CRUD_software"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_weight="1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                        <TextView
                            android:textSize="16sp"
                            android:layout_margin="3dp"
                            android:layout_gravity="center_vertical"
                            android:padding="5dp"
                            android:gravity="center"
                            android:textColor="@color/black3"
                            android:id="@+id/txtArrange"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/arrange" />

                        <Spinner
                            android:layout_marginStart="10dp"
                            android:layout_gravity="center_vertical"
                            android:id="@+id/spinnerArrange"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>
                    </LinearLayout>


                    <Button
                        android:id="@+id/btnArrange"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:text="@string/ok"
                        android:visibility="invisible" />

                </LinearLayout>

                <LinearLayout
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:textSize="16sp"
                        android:layout_margin="3dp"
                        android:layout_gravity="center_vertical"
                        android:padding="5dp"
                        android:gravity="center"
                        android:textColor="@color/black3"
                        android:id="@+id/textView6"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/search_by_name" />

                    <EditText
                        android:layout_gravity="center_vertical"
                        android:id="@+id/edtNameSearch"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:ems="10"
                        android:inputType="textPersonName"
                        android:hint="@string/name" />

                </LinearLayout>

                <LinearLayout
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:textSize="16sp"
                        android:layout_margin="3dp"
                        android:layout_gravity="center_vertical"
                        android:padding="5dp"
                        android:gravity="center"
                        android:textColor="@color/black3"
                        android:id="@+id/textView7"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/filter_by_price_bigger" />

                    <EditText
                        android:layout_gravity="center_vertical"
                        android:id="@+id/edtPriceFilter"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:hint="@string/price"
                        android:ems="10"
                        android:inputType="number" />

                    <Button
                        android:layout_gravity="center_vertical"
                        android:id="@+id/btnFilterByPriceBigger"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/ok" />
                </LinearLayout>
            </LinearLayout>

            <TextView
                android:id="@+id/line2"
                android:layout_below="@id/filter"
                android:background="@color/gray9"
                android:layout_width="match_parent"
                android:layout_height="1dp"/>

            <androidx.recyclerview.widget.RecyclerView
                android:layout_margin="5dp"
                android:layout_below="@+id/line2"
                android:id="@+id/rv_list_vehicle"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />


        </RelativeLayout>

    </LinearLayout>


</androidx.core.widget.NestedScrollView>