<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/gray13"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:padding="4dp"
        android:text="Chỉnh sửa phương tiện"
        android:textColor="@color/black"
        android:textSize="22sp" />

    <TableLayout
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:padding="2dp"
                android:text="@string/id"
                android:textColor="@color/black2"
                android:textSize="16sp" />

            <TextView
                android:textColor="@color/black2"
                android:textSize="16sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=":" />

            <TextView
                android:layout_marginEnd="2dp"
                android:layout_marginBottom="2dp"
                android:layout_marginTop="2dp"
                android:layout_marginStart="8dp"
                android:id="@+id/txtIdEdt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:padding="2dp"
                android:textColor="@color/black2"
                android:textSize="16sp" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:padding="2dp"
                android:text="@string/name"
                android:textColor="@color/black2"
                android:textSize="16sp" />

            <TextView
                android:textColor="@color/black2"
                android:textSize="16sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=":" />

            <EditText
                android:layout_marginEnd="2dp"
                android:layout_marginBottom="2dp"
                android:layout_marginTop="2dp"
                android:layout_marginStart="8dp"
                android:id="@+id/edtNameEdit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/gray14"
                android:ems="10"
                android:inputType="textPersonName"
                android:padding="2dp"
                android:textColor="@color/gray6"
                android:textSize="16sp" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:padding="2dp"
                android:text="@string/kind"
                android:textColor="@color/black2"
                android:textSize="16sp" />

            <TextView
                android:textColor="@color/black2"
                android:textSize="16sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=":" />

            <EditText
                android:id="@+id/edtKindEdt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="2dp"
                android:layout_marginBottom="2dp"
                android:layout_marginTop="2dp"
                android:layout_marginStart="8dp"
                android:background="@color/gray14"
                android:ems="10"
                android:inputType="textPersonName"
                android:padding="2dp"
                android:textColor="@color/gray6"
                android:textSize="16sp" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:padding="2dp"
                android:text="@string/price"
                android:textColor="@color/black2"
                android:textSize="16sp" />

            <TextView
                android:textColor="@color/black2"
                android:textSize="16sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=":" />

            <EditText
                android:id="@+id/edtPriceEdt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="2dp"
                android:layout_marginEnd="2dp"
                android:layout_marginBottom="2dp"
                android:background="@color/gray14"
                android:ems="10"
                android:inputType="number"
                android:padding="2dp"
                android:textColor="@color/gray6"
                android:textSize="16sp" />
        </TableRow>
    </TableLayout>

    <LinearLayout
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnOk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/ok"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/btnCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cancel"
            android:textAllCaps="false" />
    </LinearLayout>
</LinearLayout>